--- a/_frontend/_engine/blocks/icon.scss
+++ b/_frontend/_engine/blocks/icon.scss
@@ -17,10 +17,10 @@
     }
 }
 
-
 .svg {
     width: 18px;
     height: auto;
     fill: currentColor;
     vertical-align: text-bottom;
-    position: relative;}
+    position: relative;
+}
