--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -43,4 +43,8 @@
 @import "direct-action/style";
 @import "events/style";
 @import "event-inn/style";
-@import "event-inn/style";
+@import "recipe-category/style";
+@import "one-recipe/style";
+@import "text-one-recipe/style";
+@import "photo-product-recipe/style";
+@import "photo-product-recipe/style";
