--- a/_frontend/blocks/bread-crumbs/style.scss
+++ b/_frontend/blocks/bread-crumbs/style.scss
@@ -18,6 +18,10 @@
 .bread-crumbs {
     display: inline-block;
     max-width: 580px;
+    &_full {
+        max-width: 100%;
+        margin-top: 20px;
+    }
     &_return {
         margin-top: 20px;
         li {
@@ -56,8 +60,9 @@
             &:not(:last-of-type):after {
                 content: ">";
                 display: inline-block;
+                vertical-align: middle;
                 width: 9px;
-                height: 14px;
+                height: 20px;
                 margin-left: 6px;
             }
         }
