--- a/_frontend/blocks/product-use-carousel/style.scss
+++ b/_frontend/blocks/product-use-carousel/style.scss
@@ -19,6 +19,15 @@
         @include media(md) {
             width: 100%;
         }
+        &_recipes {
+            width: 33%;
+            @include media(xl) {
+                width: 50%;
+            }
+            @include media(lg) {
+                width: 100%;
+            }
+        }
     }
     &__carousel {
         padding: 15px 7px;
@@ -28,7 +37,9 @@
             min-height: 356px;
             border-radius: 10px;
             background-color: #ffffff;
-
+            &_pb-20 {
+                padding-bottom: 20px;
+            }
             img {
                 height: 216px;
                 width: 100%;
@@ -44,6 +55,37 @@
                 margin: 24px auto 0;
                 padding: 0 10px;
                 min-height: 57px;
+                &_recipes {
+                    text-align: left;
+                    padding: 0 20px;
+                    min-height: auto;
+                }
+            }
+            &__info {
+                padding: 7px 20px 13px;
+                color: #676767;
+                font-size: 16px;
+                font-weight: 300;
+                font-style: italic;
+                letter-spacing: 0.16px;
+                &__time {
+                    display: inline-block;
+                    &:after {
+                        content: "/";
+                    }
+                }
+                &__rating {
+                    display: inline-block;
+                    span {
+                        display: inline-block;
+                        width: 12px;
+                        height: 12px;
+                    }
+                }
+                &__calories {
+                    display: inline-block;
+                }
+
             }
             &__block-link {
                 text-align: right;
@@ -93,13 +135,52 @@
                 }
 
             }
+            &_m-h {
+                min-height: 230px;
+                background-color: #f1eee3;
+                text-align: center;
+                border-radius: 0;
+                img {
+                    width: 158px;
+                    height: 147px;
+                    border-radius: 50%;
+                    box-shadow: 0px 7px 5px -5px #222, -5px 40px 50px -10px #bbb;
+                    margin-top: 12%;
+                }
+            }
         }
         .random__arrows {
             margin-top: -80px;
         }
         .slick-list {
-            box-shadow: 0px 10px 30px 0px #aaa;
+            box-shadow: 0px 10px 20px 0px #aaa;
             border-radius: 10px;
+        }
+        &_one-recipe {
+            padding: 0;
+            .random__arrows {
+                margin-top: -25px;
+                fill: #f6d34b;
+            }
+            .random__arrows--next {
+                right: 10px;
+                @include media(lg) {
+                    right: -8px;
+                }
+            }
+            .random__arrows--prev {
+                left: 10px;
+                @include media(lg) {
+                    left: -8px;
+                }
+            }
+        }
+        &_p-0 {
+            padding: 0;
+            .slick-list {
+                box-shadow: none;
+                border-radius: 0;
+            }
         }
     }
     &_4 {
@@ -125,6 +206,7 @@
             }
             &__item {
                 background-color: transparent;
+                margin-bottom: 20px;
                 &_gallery {
                     min-height: auto;
                 }
@@ -144,21 +226,23 @@
                             border-radius: 10px;
                         }
                     }
+                    &_m-h {
+                        height: auto;
+                    }
                 }
             }
-        }
-        .slick-list {
-            height: 380px;
-            background-color: transparent;
+            .slick-list {
+                background-color: transparent;
+            }
         }
         &_gallery {
             margin: 60px auto 95px;
             .slick-list {
-                height: 220px;
                 background-color: transparent;
             }
         }
     }
+
 }
 
 .arrows--prev {
@@ -175,5 +259,12 @@
     }
     .arrows--next {
         right: -20px;
+    }
+}
+
+.rating-star {
+    background-image: url(../images/icons/star-no.png);
+    &_active {
+        background-image: url(../images/icons/star_active.png);
     }
 }
