--- a/_frontend/blocks/products-block/style.scss
+++ b/_frontend/blocks/products-block/style.scss
@@ -78,6 +78,7 @@
             z-index: 9;
             height: auto;
             box-shadow: 0 5px 13px rgba(59, 59, 59, 0.35);
+            background-color: #fff;
         }
         &:hover &__description {
             visibility: visible;
