--- a/_frontend/blocks/cheese/style.sass
+++ b/_frontend/blocks/cheese/style.sass
@@ -18,7 +18,7 @@
 		width: 200%
 		height: 24px
 		transform: rotate(15deg)
-		background: #fff8dd
+		background: #fff6d3
 	&:after
 		content: ''
 		left: -147px
@@ -28,7 +28,7 @@
 		width: 344px
 		height: 119px
 		transform: rotate(24deg) skew(19deg)
-		background: #fff8dd
+		background: #fff6d3
 
 	&__back 
 		position: absolute
