--- a/_frontend/blocks/clients-carousel/style.scss
+++ b/_frontend/blocks/clients-carousel/style.scss
@@ -1,6 +1,6 @@
 .clients {
     position: relative;
-    background: #fff8dd;
+    background: #fff6d3;
     padding: 110px 0 145px;
     &__title {
         font-size: 45px;
@@ -33,7 +33,7 @@
             right: -550px;
         }
         &_bg {
-            background-color: #fff8dd;
+            background-color: #fff6d3;
         }
     }
     &_about {
