--- a/_frontend/blocks/random/style.scss
+++ b/_frontend/blocks/random/style.scss
@@ -1,5 +1,5 @@
 .random {
-    background: #fff8dd;
+    background: #fff6d3;
     margin-top: 180px;
     display: -ms-flexbox;
     display: flex;
@@ -18,7 +18,7 @@
         position: absolute;
         z-index: -1;
         border-top: 800px solid transparent;
-        border-left: 2280px solid #fff8dd;
+        border-left: 2280px solid #fff6d3;
     }
 
     .row {
