--- a/_frontend/blocks/product-spinner/style.sass
+++ b/_frontend/blocks/product-spinner/style.sass
@@ -8,7 +8,7 @@
 		width: 100%
 		height: 528px
 		transform: rotate(24deg) skew(25deg)
-		background: #fff8dd
+		background: #fff6d3
 
 	margin-top: 100px
 	@include media(lg)
