--- a/_frontend/blocks/cheese/style.sass
+++ b/_frontend/blocks/cheese/style.sass
@@ -29,6 +29,7 @@
 		height: 119px
 		transform: rotate(24deg) skew(19deg)
 		background: #fff6d3
+		border-radius: 4px
 
 	&__back 
 		position: absolute
@@ -40,7 +41,7 @@
 		font-weight: 600
 		font-style: italic
 		letter-spacing: .2px
-		@include media(m)
+		@include media(sm)
 			position: relative
 			top: auto
 			right: auto
@@ -96,6 +97,7 @@
 		flex-flow: row wrap
 		-ms-flex-pack: justify
 		justify-content: space-between
+
 	&__item 
 		width: 48%
 		@include media(lg)
@@ -117,7 +119,7 @@
     width: 25px
     height: 2px
     background: #ffc928
-    transition: width .3s
+    transition: width .7s
 
 
 .cheese__link:hover 
@@ -129,7 +131,7 @@
     width: 100%
     height: 1px
     background: #ffc928
-    transition: width .3s
+    transition: width .5s
 
 
 .cheese .button 
@@ -217,7 +219,7 @@ $width: 1000px
 
 		&[data-number='item1']
 			top: $width/7.2692
-			left: $width/5.4
+			left: $width/5.35
 			transform: rotate(53deg)
 
 			background-image: url("../images/cheese/piece1.png")
