--- a/_frontend/blocks/recommendation/style.scss
+++ b/_frontend/blocks/recommendation/style.scss
@@ -2,9 +2,9 @@
     margin: auto;
     position: relative;
     z-index: 1;
-    width: 1900px;
+    width: 1850px;
 
-    $i: 1920;
+    $i: 1970;
     @while $i > 100 {
         $i: $i - 50;
 
@@ -25,6 +25,13 @@
             .arrows {
                 top: auto;
                 bottom: 0;
+
+                &.arrows--next {
+                    right: 0;
+                }
+                &.arrows--prev {
+                    left: 0;
+                }
             }
         }
 
@@ -134,7 +141,7 @@
             text-align: center;
         }
         &__line {
-            $width : 3px;
+            $width : 2px;
             &:before {
                 content: "";
                 position: absolute;
@@ -142,9 +149,9 @@
             }
             &_down:before {
                 left: 0;
-                bottom: -100%;
+                bottom: -110%;
                 width: $width;
-                height: 100%;
+                height: 110%;
             } 
             &_right:before {
                 right: -100%;
